--- a/fly.toml
+++ b/fly.toml
@@ -1,30 +1,28 @@
-# fly.toml app configuration file generated for recipes-api-new on 2025-10-23T12:01:01Z
-#
-# See https://fly.io/docs/reference/configuration/ for information about how to use this file.
-#
+app = "recipes-api"
+primary_region = "sin"  # Singapore region (gần Việt Nam)
+kill_signal = "SIGINT"
+kill_timeout = 5
+processes = []
 
-app = 'recipes-api-new'
-primary_region = 'sin'
+[env]
+  PORT = "3333"
+  HOST = "0.0.0.0"
+  NODE_ENV = "production"
 
-[build]
+[[services]]
+  internal_port = 3333
+  processes = ["app"]
+  protocol = "tcp"
 
-[[mounts]]
-  source = 'data'
-  destination = '/data'
-  auto_extend_size_threshold = 80
-  auto_extend_size_increment = '1GB'
-  auto_extend_size_limit = '10GB'
+  [[services.ports]]
+    handlers = ["http"]
+    port = 80
 
-[http_service]
-  internal_port = 3000
-  force_https = true
-  auto_stop_machines = 'stop'
-  auto_start_machines = true
-  min_machines_running = 0
-  processes = ['app']
+  [[services.ports]]
+    handlers = ["tls", "http"]
+    port = 443
 
-[[vm]]
-  memory = '1gb'
-  cpu_kind = 'shared'
-  cpus = 1
-  memory_mb = 1024
+  [[services.tcp_checks]]
+    grace_period = "30s"
+    interval = "15s"
+    timeout = "2s"
