--- a/fly.toml
+++ b/fly.toml
@@ -1,13 +1,17 @@
 app = "recipes-api"
-primary_region = "sin"  # Singapore region (gần Việt Nam)
+primary_region = "sin"
 kill_signal = "SIGINT"
 kill_timeout = 5
-processes = []
+
+[build]
+  builder = "heroku/buildpacks:20"
 
 [env]
   PORT = "3333"
   HOST = "0.0.0.0"
   NODE_ENV = "production"
+  DB_CONNECTION = "sqlite"
+  SQLITE_DB_NAME = "/app/tmp/database.sqlite"
 
 [[services]]
   internal_port = 3333
@@ -26,6 +30,7 @@ processes = []
     grace_period = "30s"
     interval = "15s"
     timeout = "2s"
+
 [mounts]
   source = "data"
   destination = "/app/tmp"
