--- a/fly.toml
+++ b/fly.toml
@@ -1,22 +1,22 @@
 app = "recipes-api"
 primary_region = "sin"
-kill_signal = "SIGINT"
-kill_timeout = 5
 
 [build]
-  builder = "heroku/buildpacks:20"
+  dockerfile = "./Dockerfile"
 
 [env]
   PORT = "3333"
   HOST = "0.0.0.0"
   NODE_ENV = "production"
-  DB_CONNECTION = "sqlite"
-  SQLITE_DB_NAME = "/app/tmp/database.sqlite"
 
 [[services]]
   internal_port = 3333
-  processes = ["app"]
   protocol = "tcp"
+
+  [services.concurrency]
+    hard_limit = 25
+    soft_limit = 20
+    type = "connections"
 
   [[services.ports]]
     handlers = ["http"]
@@ -25,14 +25,6 @@ kill_timeout = 5
   [[services.ports]]
     handlers = ["tls", "http"]
     port = 443
-
-  [[services.tcp_checks]]
-    grace_period = "30s"
-    interval = "15s"
-    timeout = "2s"
-
 [mounts]
   source = "data"
   destination = "/app/tmp"
-
-
