--- a/fly.toml
+++ b/fly.toml
@@ -25,3 +25,6 @@ primary_region = "sin"
   [[services.ports]]
     handlers = ["tls", "http"]
     port = 443
+[mounts]
+  source = "data"
+  destination = "/app/data"
